framec/tests/snapshots/python_snapshots__pushpop.snap
---
source: framec/tests/python_snapshots.rs
expression: "compile_fixture(\"05_pushpop\", \"python_3\")"
---
from typing import Any, Optional, List, Dict, Callable

class PushPopFrameEvent:
    def __init__(self, message: str, parameters):
        self._message = message
        self._parameters = parameters


class PushPopFrameContext:
    def __init__(self, event: PushPopFrameEvent, default_return):
        self.event = event
        self._return = default_return
        self._data = {}
        self._transitioned = False


class PushPopCompartment:
    def __init__(self, state: str, parent_compartment = None):
        self.state = state
        self.state_args = []
        self.state_vars = {}
        self.enter_args = []
        self.exit_args = []
        self.forward_event = None
        self.parent_compartment = parent_compartment

    def copy(self) -> 'PushPopCompartment':
        c = PushPopCompartment(self.state, self.parent_compartment)
        c.state_args = self.state_args.copy()
        c.state_vars = self.state_vars.copy()
        c.enter_args = self.enter_args.copy()
        c.exit_args = self.exit_args.copy()
        c.forward_event = self.forward_event
        return c


class PushPop:
    def __init__(self):
        self._state_stack = []
        self._context_stack = []
        self.pings = 0
        self.leaves = 0
        self.__compartment = self.__prepareEnter("Idle", [], [])
        self.__next_compartment = None

    @classmethod
    def _create(cls):
        c = cls()
        __e = PushPopFrameEvent("$>", c.__compartment.enter_args)
        __ctx = PushPopFrameContext(__e, None)
        c._context_stack.append(__ctx)
        c.__kernel(__e)
        c._context_stack.pop()
        return c

    _HSM_CHAIN = {
        "Idle": ["Idle"],
        "Nested": ["Nested"],
    }
    def __prepareEnter(self, leaf, state_args, enter_args):
        comp = None
        for name in self._HSM_CHAIN[leaf]:
            new_comp = PushPopCompartment(name)
            new_comp.state_args = list(state_args)
            new_comp.enter_args = list(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        return comp

    def __prepareExit(self, exit_args):
        comp = self.__compartment
        while comp is not None:
            comp.exit_args = list(exit_args)
            comp = comp.parent_compartment

    def __kernel(self, __e):
        # Route event to current state
        self.__router(__e)
        # Drain any transitions queued by the handler
        while self.__next_compartment is not None:
            next_compartment = self.__next_compartment
            self.__next_compartment = None
            # Exit the current (leaf) state
            self.__router(PushPopFrameEvent("<$", self.__compartment.exit_args))
            # Switch to the new compartment
            self.__compartment = next_compartment
            if next_compartment.forward_event is None:
                # No forwarded event — synthesize a fresh $>
                self.__router(PushPopFrameEvent("$>", self.__compartment.enter_args))
            else:
                if next_compartment.forward_event._message == "$>":
                    # Forwarded event IS $> — dispatch directly so the
                    # destination's $> receives the caller's payload
                    self.__router(next_compartment.forward_event)
                else:
                    # Forwarded event is not $> — initialize the destination
                    # with a fresh $>, then dispatch the forward to it
                    self.__router(PushPopFrameEvent("$>", self.__compartment.enter_args))
                    self.__router(next_compartment.forward_event)
            next_compartment.forward_event = None
            # Mark all stacked contexts as transitioned
            for ctx in self._context_stack:
                ctx._transitioned = True

    def __router(self, __e):
        if self.__compartment.state == "Idle":
            self._state_Idle(__e, self.__compartment)
        elif self.__compartment.state == "Nested":
            self._state_Nested(__e, self.__compartment)

    def __transition(self, next_compartment):
        self.__next_compartment = next_compartment

    def ping(self):
        __e = PushPopFrameEvent("ping", [])
        __ctx = PushPopFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def nest(self):
        __e = PushPopFrameEvent("nest", [])
        __ctx = PushPopFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def unnest(self):
        __e = PushPopFrameEvent("unnest", [])
        __ctx = PushPopFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def leaf(self):
        __e = PushPopFrameEvent("leaf", [])
        __ctx = PushPopFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def _state_Idle(self, __e, compartment):
        if __e._message == "nest":
            self._s_Idle_hdl_user_nest(__e, compartment)
            return
        if __e._message == "ping":
            self._s_Idle_hdl_user_ping(__e, compartment)
            return

    def _state_Nested(self, __e, compartment):
        if __e._message == "leaf":
            self._s_Nested_hdl_user_leaf(__e, compartment)
            return
        if __e._message == "unnest":
            self._s_Nested_hdl_user_unnest(__e, compartment)
            return

    def _s_Idle_hdl_user_nest(self, __e, compartment):
        self._state_stack.append(self.__compartment)
        __compartment = self.__prepareEnter("Nested", [], [])
        self.__transition(__compartment)
        return

    def _s_Idle_hdl_user_ping(self, __e, compartment):
        self.pings = self.pings + 1

    def _s_Nested_hdl_user_leaf(self, __e, compartment):
        self.leaves = self.leaves + 1

    def _s_Nested_hdl_user_unnest(self, __e, compartment):
        __saved = self._state_stack.pop()
        self.__transition(__saved)
        return
